--- a/Fumigabot/app/src/main/res/drawable/ic_fumigabot_launcher_foreground.xml
+++ b/Fumigabot/app/src/main/res/drawable/ic_fumigabot_launcher_foreground.xml
@@ -1,111 +1,39 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="1088.0756"
-    android:viewportHeight="1088.0756">
-  <group android:translateX="288.03778"
-      android:translateY="288.03778">
+    android:viewportWidth="347.8909"
+    android:viewportHeight="347.8909">
+  <group android:translateX="112.450455"
+      android:translateY="88.90546">
     <path
-        android:pathData="M256,0C233.196,0 214.71,18.486 214.71,41.29L214.71,82.58L297.291,82.58L297.291,41.29C297.29,18.486 278.804,0 256,0Z"
-        android:strokeWidth="1"
-        android:fillColor="#FAC97A"
-        android:strokeColor="#00000000"/>
+        android:pathData="M43.27,123C55,111.78 67.09,100.85 78.18,88.92c16.92,-18.2 27.91,-39.29 32.25,-63.79a185.08,185.08 0,0 0,2.7 -22A10.56,10.56 0,0 1,113.79 0a146.76,146.76 0,0 1,7.27 29.74c0.67,4.47 1.17,9 1.86,13.43a6.8,6.8 0,0 1,-0.86 4.09C113,67.13 99.1,83.1 81.75,96.13c-12.47,9.36 -25.22,18.36 -37.84,27.51C43.21,123.93 43.11,123.6 43.27,123Z"
+        android:fillColor="#eb5b62"/>
     <path
-        android:pathData="M239.484,24.774L239.484,3.486C224.913,9.863 214.71,24.368 214.71,41.29L214.71,82.58L297.291,82.58L297.291,49.548L264.259,49.548C250.576,49.548 239.484,38.457 239.484,24.774Z"
-        android:strokeAlpha="0"
-        android:strokeWidth="1"
-        android:fillColor="#FAF767"
-        android:strokeColor="#00000000"
-        android:fillAlpha="0"/>
+        android:pathData="M22,150.19c10.92,-9 23.38,-15.44 35.81,-22 17.4,-9.13 35.47,-17.06 51.39,-28.8C114,95.9 118.3,91.87 123,87.75c-0.6,9.22 -2.78,17.74 -4.91,26.28 -0.43,1.7 -1.59,2.26 -2.86,2.86 -13.82,6.56 -28.41,11 -43,15.35 -16.93,5.07 -33.83,10.25 -49.48,18.69C22,151.15 21.81,150.84 22,150.19Z"
+        android:fillColor="#eb5b62"/>
     <path
-        android:pathData="M338.581,66.065L173.419,66.065C164.298,66.065 156.903,73.459 156.903,82.581L156.903,107.355L355.097,107.355L355.097,82.581C355.097,73.459 347.702,66.065 338.581,66.065Z"
-        android:strokeWidth="1"
-        android:fillColor="#9C969E"
-        android:strokeColor="#00000000"/>
+        android:pathData="M43.87,53.34c0.07,36.69 -17.27,67 -33.95,97.5 2.79,-12.65 6.18,-25.11 8.87,-37.74 2.93,-13.75 5,-27.57 3.85,-41.67a5.85,5.85 0,0 1,2.7 -5.78C31.21,61.22 36.82,56.43 43.87,53.34Z"
+        android:fillColor="#eb5b62"/>
     <path
-        android:pathData="M156.903,82.581h198.194v24.774h-198.194z"
-        android:strokeWidth="1"
-        android:fillColor="#867E88"
-        android:strokeColor="#00000000"/>
+        android:pathData="M29.25,128.25c7.66,-10.93 15.85,-21.5 23,-32.8C63.34,78 70.49,59.27 72.54,38.67c0.11,-1.1 0.18,-2.08 1.37,-2.77 5,-2.94 10,-6 15.28,-9.17a126.71,126.71 0,0 1,-6.93 30c-6.81,19.09 -18.72,34.92 -32.07,49.82 -6.72,7.49 -13.53,14.9 -20.29,22.34C29.31,129.06 29,128.91 29.25,128.25Z"
+        android:fillColor="#eb5b62"/>
     <path
-        android:pathData="M487.226,371.613L24.774,371.613C15.652,371.613 8.258,364.218 8.258,355.097L8.258,256C8.258,246.878 15.653,239.484 24.774,239.484L487.226,239.484C496.348,239.484 503.742,246.879 503.742,256L503.742,355.097C503.742,364.218 496.347,371.613 487.226,371.613Z"
-        android:strokeWidth="1"
-        android:fillColor="#E6646E"
-        android:strokeColor="#00000000"/>
+        android:pathData="M102.48,144.62c-6,6.66 -12.09,12 -19.29,16a5.18,5.18 0,0 1,-3.24 0.24c-15.31,-1.37 -30.6,-3.13 -46,-2.68 -4.55,0.13 -9.09,0.5 -13.66,0.49C46.58,148.79 74.46,148.54 102.48,144.62Z"
+        android:fillColor="#eb5b62"/>
     <path
-        android:pathData="M33.032,239.484h445.935v132.129h-445.935z"
-        android:strokeWidth="1"
-        android:fillColor="#DC4655"
-        android:strokeColor="#00000000"/>
+        android:pathData="M3.88,156.8c-5.66,-24.34 -5.11,-47.14 1.55,-62.05 1,10.77 0.49,20.87 0,31S4.42,145.78 3.88,156.8Z"
+        android:fillColor="#eb5b62"/>
     <path
-        android:pathData="M412.903,512L99.097,512C71.732,512 49.549,489.816 49.549,462.452L49.549,148.645C49.549,121.28 71.733,99.097 99.097,99.097L412.903,99.097C440.268,99.097 462.451,121.281 462.451,148.645L462.451,462.451C462.452,489.816 440.268,512 412.903,512Z"
-        android:strokeWidth="1"
-        android:fillColor="#C4DEFF"
-        android:strokeColor="#00000000"/>
+        android:pathData="M56.41,169.15c-16.87,2.45 -32.84,-0.33 -48.84,-3.9C15.75,161.87 46.4,164.22 56.41,169.15Z"
+        android:fillColor="#eb5b62"/>
     <path
-        android:pathData="M165.161,264.258m-66.065,0a66.065,66.065 0,1 1,132.13 0a66.065,66.065 0,1 1,-132.13 0"
-        android:strokeWidth="1"
-        android:fillColor="#A5CDFF"
-        android:strokeColor="#00000000"/>
+        android:pathData="M29.25,128.25l0.65,0.67a23.58,23.58 0,0 1,-5.16 5.85A22.72,22.72 0,0 1,29.25 128.25Z"
+        android:fillColor="#eb5b62"/>
     <path
-        android:pathData="M165.161,264.258m-49.548,0a49.548,49.548 0,1 1,99.096 0a49.548,49.548 0,1 1,-99.096 0"
-        android:strokeWidth="1"
-        android:fillColor="#FFFFFF"
-        android:strokeColor="#00000000"/>
+        android:pathData="M22,150.19l0.75,0.74A8.16,8.16 0,0 1,18.34 153Z"
+        android:fillColor="#eb5b62"/>
     <path
-        android:pathData="M222.967,264.258C222.967,268.823 219.273,272.516 214.71,272.516L115.612,272.516C111.047,272.516 107.354,268.823 107.354,264.258C107.354,259.694 111.048,256 115.612,256L214.71,256C219.273,256 222.967,259.693 222.967,264.258Z"
-        android:strokeWidth="1"
-        android:fillColor="#E6646E"
-        android:strokeColor="#00000000"/>
-    <path
-        android:pathData="M363.355,437.677L148.645,437.677C139.523,437.677 132.129,430.282 132.129,421.161L132.129,404.645C132.129,395.523 139.524,388.129 148.645,388.129L363.355,388.129C372.477,388.129 379.871,395.524 379.871,404.645L379.871,421.161C379.871,430.283 372.476,437.677 363.355,437.677Z"
-        android:strokeWidth="1"
-        android:fillColor="#FFFFFF"
-        android:strokeColor="#00000000"/>
-    <path
-        android:pathData="M346.839,264.258m-66.065,0a66.065,66.065 0,1 1,132.13 0a66.065,66.065 0,1 1,-132.13 0"
-        android:strokeWidth="1"
-        android:fillColor="#A5CDFF"
-        android:strokeColor="#00000000"/>
-    <path
-        android:pathData="M346.839,264.258m-49.548,0a49.548,49.548 0,1 1,99.096 0a49.548,49.548 0,1 1,-99.096 0"
-        android:strokeWidth="1"
-        android:fillColor="#FFFFFF"
-        android:strokeColor="#00000000"/>
-    <path
-        android:pathData="M289.032,264.259C289.032,259.694 292.726,256.001 297.29,256.001L396.387,256.001C400.952,256.001 404.645,259.695 404.645,264.259C404.645,268.823 400.951,272.517 396.387,272.517L297.29,272.517C292.726,272.517 289.032,268.823 289.032,264.259Z"
-        android:strokeWidth="1"
-        android:fillColor="#E6646E"
-        android:strokeColor="#00000000"/>
-    <path
-        android:pathData="M165.161,388.129h16.516v49.548h-16.516z"
-        android:strokeWidth="1"
-        android:fillColor="#DCEBFF"
-        android:strokeColor="#00000000"/>
-    <path
-        android:pathData="M206.452,388.129h16.516v49.548h-16.516z"
-        android:strokeWidth="1"
-        android:fillColor="#DCEBFF"
-        android:strokeColor="#00000000"/>
-    <path
-        android:pathData="M247.742,388.129h16.516v49.548h-16.516z"
-        android:strokeWidth="1"
-        android:fillColor="#DCEBFF"
-        android:strokeColor="#00000000"/>
-    <path
-        android:pathData="M289.032,388.129h16.516v49.548h-16.516z"
-        android:strokeWidth="1"
-        android:fillColor="#DCEBFF"
-        android:strokeColor="#00000000"/>
-    <path
-        android:pathData="M330.323,388.129h16.516v49.548h-16.516z"
-        android:strokeWidth="1"
-        android:fillColor="#DCEBFF"
-        android:strokeColor="#00000000"/>
-    <path
-        android:pathData="M148.645,478.968C112.159,478.968 82.58,449.39 82.58,412.903L82.58,101.977C63.348,108.786 49.548,127.081 49.548,148.645L49.548,462.451C49.548,489.816 71.732,511.999 99.096,511.999L412.902,511.999C434.467,511.999 452.761,498.199 459.57,478.967L148.645,478.967Z"
-        android:strokeWidth="1"
-        android:fillColor="#A5CDFF"
-        android:strokeColor="#00000000"/>
+        android:pathData="M43.27,123c0.22,0.2 0.43,0.41 0.64,0.62 -0.95,1.2 -2.23,2 -4.4,3.19A11.12,11.12 0,0 1,43.27 123Z"
+        android:fillColor="#eb5b62"/>
   </group>
 </vector>
