--- a/Fumigabot/app/src/main/res/layout/activity_splash.xml
+++ b/Fumigabot/app/src/main/res/layout/activity_splash.xml
@@ -7,42 +7,27 @@
     tools:context=".SplashActivity">
 
     <ImageView
-        android:id="@+id/imageRobot"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:layout_marginStart="129dp"
-        android:layout_marginEnd="128dp"
+        android:id="@+id/logoCompleto"
+        android:layout_width="293dp"
+        android:layout_height="110dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_pos2"
-        tools:srcCompat="@drawable/ic_pos2" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="@string/app_name"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/imageRobot"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.45"
+        app:srcCompat="@drawable/ic_logo_completo"
+        tools:srcCompat="@drawable/ic_logo_completo" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="48dp"
         android:text="Cargando..."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageRobot" />
+        app:layout_constraintTop_toBottomOf="@+id/logoCompleto" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
