--- a/Fumigabot/app/src/main/res/values/colors.xml
+++ b/Fumigabot/app/src/main/res/values/colors.xml
@@ -9,7 +9,28 @@
     <color name="rosa_fuerte_transp">#9ED81B60</color>
 
 
-    <color name="colorPrimary">#6200EE</color>
+    <color name="purple_200">#bb86fc</color> <!--Color primary (dark)-->
+    <color name="purple_500">#6200ee</color> <!--Color primary (light)-->
+    <color name="purple_600">#4b01d0</color> <!--Color primary variant (dark)-->
+    <color name="purple_700">#3700b3</color> <!--Color primary variant (light)-->
+
+    <color name="green_200">#03dac6</color> <!--Color secondary-->
+    <color name="green_500">#018786</color> <!--Color secondary variant-->
+
+    <color name="red_200">#cf6679</color> <!--Color error (dark)-->
+    <color name="red_600">#b00020</color> <!--Color error (light)-->
+
+    <!--Color surface (light), color on error (light), -->
+    <!--color on surface (dark), color on surface (dark)-->
+    <color name="white_50">#ffffff</color>
+
+    <color name="black_800">#121212</color> <!--Color surface (dark)-->
+    <!--Color on secondary (light), color on background (light),-->
+    <!--color on surface (light)-->
+    <color name="black_900">#000000</color>
+
+
+    <!--color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryVariant">#3700B3</color>
     <color name="colorSecondary">#03DAC6</color>
     <color name="colorSecondaryVariant">#018786</color>
@@ -22,7 +43,7 @@
     <color name="colorOnBackground">#000000</color>
     <color name="colorOnSurface">#000000</color>
     <color name="colorOnError">#FFFFFF</color>
-    <!--color name="colorOnSurface">#23AE18</color-->
+    <!-color name="colorOnSurface">#23AE18</color-->
 
 
     <!-- Colores nuestros -->
@@ -32,7 +53,7 @@
     <color name="fondoAdvertencia">#FFB74D</color>
     <color name="fondoAlerta">#EF5350</color>
     <color name="fondoAvisoBateria">#9575CD</color>
-    <color name="bordeRecuadro">@color/colorBackground</color>
+    <color name="bordeRecuadro">#FFF</color> <!--Color background-->
     <color name="devEncendido">#4CAF50</color>
     <color name="devOcupado">#FF9800</color>
     <color name="devApagado">#33000000</color>
