--- a/Fumigabot/app/src/main/res/layout/fragment_step1.xml
+++ b/Fumigabot/app/src/main/res/layout/fragment_step1.xml
@@ -33,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/card_layout_margin"
-            android:text="Selecciona a continuación el químico que quieras utilizar para realizar la fumigación o desinfección."
+            android:text="Seleccioná el químico que quieras utilizar para realizar la fumigación o desinfección."
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
