--- a/Fumigabot/app/src/main/res/layout/fragment_step3.xml
+++ b/Fumigabot/app/src/main/res/layout/fragment_step3.xml
@@ -32,8 +32,7 @@
             android:id="@+id/textView8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_margin="@dimen/card_layout_margin"
             android:text="Elegí el día y la hora que consideres adecuada para realizar la fumigación o desinfección. También podrás indicar si querés que la misma se realice de forma diaria."
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -44,12 +43,14 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <CalendarView
-            android:id="@+id/calendarView"
+            android:id="@+id/calendario"
             android:layout_width="252dp"
             android:layout_height="324dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.899"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.356" />
@@ -69,32 +70,50 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.392" />
 
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="212dp"
-            android:layout_height="53dp"
+        <TimePicker
+            android:id="@+id/horaPicker"
+            android:layout_width="239dp"
+            android:layout_height="93dp"
+            android:layout_marginEnd="16dp"
             android:ems="10"
             android:hint="ej. 13:30"
             android:inputType="time"
+            android:timePickerMode="spinner"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.804"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.738" />
+            app:layout_constraintTop_toBottomOf="@+id/calendario"
+            app:layout_constraintVertical_bias="0.0" />
 
         <CheckBox
             android:id="@+id/checkEsRecurrente"
             android:layout_width="335dp"
             android:layout_height="53dp"
+            android:layout_marginStart="16dp"
             android:text="Repetir diariamente"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.092"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.882" />
+            app:layout_constraintVertical_bias="0.909" />
+
+        <CheckBox
+            android:id="@+id/checkInstantanea"
+            android:layout_width="149dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:text="Iniciar ahora"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView8"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/textView10"
@@ -109,7 +128,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.726" />
+            app:layout_constraintVertical_bias="0.766" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
