--- a/Fumigabot/app/src/main/res/layout/activity_nueva_fumigacion.xml
+++ b/Fumigabot/app/src/main/res/layout/activity_nueva_fumigacion.xml
@@ -35,8 +35,9 @@
     </com.google.android.material.card.MaterialCardView>
 
     <ScrollView
-        android:layout_width="409dp"
-        android:layout_height="538dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:fillViewport="true"
         app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
